WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268705
text-transform test failures due to Lithuanian rules and out-of-flow characters
https://bugs.webkit.org/show_bug.cgi?id=268705
Summary
text-transform test failures due to Lithuanian rules and out-of-flow characters
Darin Adler
Reported
2024-02-03 18:22:26 PST
Three WPT tests of text-transform are failing. Two are due to Lithuanian language specifics, and one due to incorrect handling of out of flow characters.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-03 18:23:21 PST
<
rdar://problem/122251072
>
Darin Adler
Comment 2
2024-02-03 18:28:37 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23823
EWS
Comment 3
2024-02-04 12:00:51 PST
Committed
274073@main
(6e67536ebe5b): <
https://commits.webkit.org/274073@main
> Reviewed commits have been landed. Closing PR #23823 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug