Cherry-pick 274073@main (6e67536ebe5b). https://bugs.webkit.org/show_bug.cgi?id=268705

text-transform test failures due to Lithuanian rules and out-of-flow characters
    https://bugs.webkit.org/show_bug.cgi?id=268705
    rdar://122251072

    Reviewed by Tim Nguyen.

    Changed so Lithuanian won't use the fast path, and so we won't consider out of line
    characters when doing title case.

    * LayoutTests/TestExpectations: Expect 3 more tests to pass. Also took off incorrect bug
    numbers. Many tests were marked with a closed bug, which is not what bug numbers in this
    file are supposed to mean.

    * Source/WTF/wtf/text/StringImpl.cpp:
    (WTF::needsTurkishCasingRules): Tweaked style.
    (WTF::needsGreekUppercasingRules): Ditto.
    (WTF::needsLithuanianCasingRules): Added.
    (WTF::StringImpl::convertToLowercaseWithLocale): Don't use fast path for Lithuanian.
    (WTF::StringImpl::convertToUppercaseWithLocale): Ditto.

    * Source/WebCore/rendering/RenderText.cpp:
    (WebCore::RenderText::previousCharacter const): Skip renderers that are not in flow.

    Canonical link: https://commits.webkit.org/274073@main

Canonical link: https://commits.webkit.org/266719.365@webkitglib/2.42